--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -20,11 +20,22 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
 
+      # installs dependencies, builds and runs tests
       - name: Build project and run tests
         run: |
           go get -d -v ./... && go install -v ./...
           go build
           go test -v ./tests/
+
       - name: Build Docker Container
         run: |
-          docker build -f Dockerfile -t grocery-store-api .
+          docker build -f Dockerfile -t grocery-store-api .'
+          
+      # push to the docker hub repo
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: murphylsou/grocery-store-api
+          tag_with_ref: true
