--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -39,3 +39,19 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: murphylsou/grocery-store-api
           tag_with_ref: true
+          
+      # notify the team when the pipeline fails
+      - name: Send Email
+        if: always()
+        uses: dawidd6/action-send-mail@v2
+        with:
+          # use gmail account
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_APP_PASSWORD }}
+          # craft email
+          subject: Latest build in workflow ${{ github.workflow }} in ${{ github.repository }} exited with ${{ job.status }}
+          body: Repo -- ${{ github.repository }}\nWorkflow -- ${{ github.workflow }}\nStatus -- ${{ job.status }}\nURL -- https://github.com/murnux/grocery-store-api/actions/workflows/ci-pipeline.yml
+          to: liamphmurphy@gmail.com
+          from: GitHub Workflow
